Change overflow to overflow-y

--- a/styles/main.css
+++ b/styles/main.css
@@ -80,7 +80,7 @@ figcaption {
     max-width: 600px;
 	/* need to add this for strange devices that create fixed content
 	and no scroll like Microsoft Lumia 550. Now the content will fit for index.html */
-	overflow: auto;
+	overflow-y: auto;
     text-align: center;
     width: 85%;
 }
