remove .logo styles clean up css

--- a/styles/main.css
+++ b/styles/main.css
@@ -211,30 +211,22 @@ p.caption a {
 
 .header {
 	margin-top: 0;
+	width: 100%;
 }
 
 .header, .index-header {
 	background: rgba(104, 151, 187, 1);
 }
 
-.index-header .logo, .header .logo {
-	padding-top: 0.25rem;
-}
-
-.logo {
-	height: 100%;
-	max-height: 250px;
-	max-width: 187.50px;
-    text-align: center;
-    text-decoration: none;
-	width: 100%;
-}
-
 .brand {
-	height: auto;
-	margin-top: 0;
-	max-width: 7.8125rem;
 	width: 100%;
+	width: 7.8125rem;
+	height: auto;
+	display: flex;
+	margin-left: 1.125rem;
+	font-size: 2.25rem;
+	font-weight: bold;
+	padding: 0;
 }
 /* End Header Logo Styling */
 /* nav styles using Flexbox (screens greater than 899px) */
@@ -288,15 +280,12 @@ a:hover {
         top: 0;
     }
 
-	.header .logo, .index-header .logo {
-		padding-top: 1.5rem;
-	}
-
 	.brand {
-		margin-top: -1.25rem;
+		margin-left: 1.125rem;
 		width: 100%;
-		max-width: 7.8125rem;
+		width: 7.8125rem;
 		height: auto;
+		display: flex;
 	}
 
     li {
