--- a/styles/quote-cloud.css
+++ b/styles/quote-cloud.css
@@ -206,7 +206,7 @@ a:hover {
 }
 
 /* end article quote-cloud styling desktop */
-/* font-size specific max-width: 640px and max-height: 360px (Microsoft Lumia 550) */
+/* font-size specific width: 640px and height: 360px (Microsoft Lumia 550) */
 @media (width: 640px) and (height: 360px) {
 	h1 {
 		margin-top: 0;
