--- a/styles/contact.css
+++ b/styles/contact.css
@@ -287,7 +287,7 @@ input {
 .warning-wrapper fieldset {
 	display: flex;
 	align-items: center;
-	background: #ff7452;
+	background: #e54141;
 	margin: 1.5rem auto;
 	padding: 5px 5px 10px;
 	width: 94%;
