--- a/styles/main.css
+++ b/styles/main.css
@@ -38,15 +38,22 @@ img {
     height: auto;
     margin: 0 auto;
     max-width: 800px;
-    width: 100%;
+    max-width: 100%;
+	grid-column: 1 / 2;
+    grid-row: 1 / 3;
 }
 
 figure {
     border: 1px solid;
-    display: block;
     margin: 4rem auto;
     max-width: 800px;
     width: 90%;
+	/* add so that things would display correctly and figcaption would
+	display at all because set to position: absolute. */
+	position: relative;
+	/* this addition removes any margin or padding that was going on around the
+	figcaption text from all the images in desktop view. */
+	display: flex;
 }
 
 figcaption {
@@ -55,9 +62,18 @@ figcaption {
     padding-bottom: 0.25rem;
     padding-top: 0.25rem;
     text-align: center;
-    width: 90%;
     /* point this out to class and toggle it to show effect */
     word-break: break-word;
+    background: rgba(black, 0.5);
+	/* Below addded so that the figcaption text would overlay on top of image
+	instead of below */
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	background: rgba(255, 255, 255, 0.3);
+	font-weight: normal;
+	width: 100%;
 }
 
 /* End global styling */
