--- a/styles/main.css
+++ b/styles/main.css
@@ -64,14 +64,14 @@ figcaption {
     text-align: center;
     /* point this out to class and toggle it to show effect */
     word-break: break-word;
-    background: rgba(black, 0.5);
+    /* background: rgba(black, 0.6); */
 	/* Below addded so that the figcaption text would overlay on top of image
 	instead of below */
 	position: absolute;
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
-	background: rgba(255, 255, 255, 0.3);
+	background: rgba(255, 255, 255, 0.5);
 	font-weight: normal;
 	width: 100%;
 }
